--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,7 @@ jobs:
       run: ls -a
       
     - name: Step 5 - Whats in the target directory?
-      run: cd target
-           ls -a
+      run: |
+       cd target
+       ls -a
         
