--- a/pom.xml
+++ b/pom.xml
@@ -161,5 +161,7 @@
       </resource>
     </resources>
 
+    <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
+
   </build>
 </project>
