--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,41 +1,22 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+name: tests
+on: push
 jobs:
-  build:
-
+  run_tests:
     runs-on: ubuntu-latest
-
     steps:
-    
-    - name: Step 1 - Checkout main branch from github
-      uses: actions/checkout@v2
-      
-    - name: Step 2 - Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+      - name: Checkout the repository
+        uses: actions/checkout@v2
         
-    - name: Step 3 - Have Github Actions Build Maven Project 
-      run: mvn clean javafx:compile
-      
-    - name: Step 4 - List the current directory
-      run: ls -a
-      
-    - name: Step 5 - Whats in the target directory?
-      run: |
-       cd target
-       ls -a
-       
-    - name: Step 6 - Run the unit tests
-      run: mvn -B test --file pom.xml
-        
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+          
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
