--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,9 @@ jobs:
           
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+        
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with: 
+         files: test-results/**/*.xml
